[package]
name = "image-kmeans"
version = "3.0.0"
authors = ["Colin McCulloch <colin@zyzle.dev>"]
edition = "2021"
description = "A WebAssembly module providing k-means clustering calculation for JS canvas images"
license = "MIT"
repository = "https://github.com/Zyzle/image-kmeans"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
js-sys = "0.3.77"
itertools = "0.14.0"
rand = "0.9.2"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
gloo-utils = { version = "0.2.0", features = ["serde"] }
tsify = { version = "0.5.5", features = ["js"] }
wasm-bindgen-futures = "0.4.51"

[dependencies.web-sys]
version = "0.3.77"
features = ["console", "CanvasRenderingContext2d", "ImageData"]

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
